# packer

./: Cargo.toml  LICENSE  README.md  build.rs  config.json  packer.nsi
assets/: error_page.html
error/: index.html
releases/v0.2.1/windows_x86_64_v0.2.1/: packer.nsi
releases/v0.2.1/windows_x86_64_v0.2.1/packer/: config.json
src/: launch.rs  main.rs
wix/: main.wxs
