[package]
name = "packer"
version = "0.2.2"
edition = "2021"
description = "Packer is a simple web server used to serve static contents."
license = "BSD-3-Clause License"
authors = [
    "imrany <imranmat254@gmail.com>",
]
publish=false
repository = "https://github.com/imrany/packer"
readme = "README.md"
categories = ["web", "serve", "CLI"]
keywords = ["packer", "network", "connect"]
rust-version = "1.76.0"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.winres]
OriginalFilename = "packer.exe"
authors = "imrany"
license = "BSD-3-Clause License"
repository = "https://github.com/imrany/packer"
homepage = "https://yourwebsite.com"
ProductVersion="0.2.2"
FileDescription = "Packer is a simple web server used to serve static contents."
ProductName = "Packer"
LegalCopyright = "Copyright © 2024"

# [build]
# target = ["x86_64-pc-windows-msvc","x86_64-unknown-linux-gnu"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.2"
actix-multipart = "0.6.1"
actix-web = "4.4.0"
anyhow = "1.0.75"
async-std = "1.12.0"
clap = { version = "4.4.11", features = ["derive"] }
current_platform = "0.2.0"
dirs = "5.0.1"
futures = "0.3.29"
futures-util = "0.3.30"
local-ip-address = "0.5.6"
open = "5.0.1"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
